<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="?attr/actionBarSize"
    tools:context=".presentation.fragment.ViewingFragment">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/button_back_description"
        android:src="@drawable/round_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/accountImage"
        style="@style/ShapeAppearanceOverlay.Gifmaster.ImageView.Circle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <TextView
        android:id="@+id/textAuthorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/accountImage"
        app:layout_constraintEnd_toStartOf="@id/btnShare"
        app:layout_constraintStart_toEndOf="@id/accountImage"
        app:layout_constraintTop_toTopOf="@id/accountImage"
        tools:text="Author name" />

    <ImageButton
        android:id="@+id/btnShare"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="12dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/button_share_description"
        android:src="@drawable/round_share"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textAuthorName"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:tint="@color/white" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/gif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountImage" />

    <TextView
        android:id="@+id/textOfSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnSave"
        app:layout_constraintStart_toStartOf="@id/btnSave" />

    <ImageButton
        android:id="@+id/btnSave"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/button_save_description"
        android:paddingTop="30dp"
        android:src="@drawable/round_bookmark_border"
        app:layout_constraintBottom_toTopOf="@id/textOfSaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textOfLikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/like"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="@id/btnLike"
        app:layout_constraintStart_toStartOf="@id/btnLike"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

    <ImageButton
        android:id="@+id/btnLike"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/button_like_description"
        android:paddingTop="30dp"
        android:src="@drawable/heart_white_border"
        app:layout_constraintBottom_toTopOf="@id/textOfLikeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardGifProvider"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/second_background"
        android:elevation="2dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageGiphyProvider"
                style="@style/ShapeAppearanceOverlay.Gifmaster.ImageView.Circle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:padding="4dp"
                android:src="@drawable/giphy" />

            <TextView
                android:id="@+id/textProvider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingHorizontal="8dp"
                android:text="@string/provided_by_giphy"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="italic" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>




























